--- a/src/app/admin/setup/setup.component.html
+++ b/src/app/admin/setup/setup.component.html
@@ -6,7 +6,7 @@
                 <c-card-body>
                     <form cForm>
                         <div class="text-center">
-                            <img src="assets/images/admin_logo.jpg" style="width: 150px; height: 150px"
+                            <img src="assets/logo.jpg" style="width: 150px; height: 150px"
                                 alt="logo.png" />
                         </div>
                         <div class="auth-box text-center">
