add alot of code

--- a/src/app/admin/orders/orders.component.html
+++ b/src/app/admin/orders/orders.component.html
@@ -1,121 +1,68 @@
-<app-confirm-modal (confirmed)="handleConfirmation()" [inputData]="inputData" [visible]="visible" ></app-confirm-modal>
-<app-loader [visible]="loading" ></app-loader>
-<div class="row">
-    <div class="col-md-12">
-      <div class="card">
-        <div class="card-body">
-          <h5>{{'All Order'  }}</h5>
-        </div>
-        <div class="card-body reset-table p-t-0">
-          <div class="form-group row">
-            <label class="col-sm-2 col-form-label">{{'Search'  }}</label>
-            <div class="col-sm-6">
-              <input type="text" class="form-control form-control-round"
-                [placeholder]="('Search Order By ID'  ) || '&nbsp;'" (input)="search($event)">
-            </div>
-  
-          </div>
-          <div class="table-responsive">
-            <table class="table table-hover">
-              <thead>
-                <tr class="text-uppercase">
-                  <th>ID</th>
-                  <th>{{'User'  }}</th>
-                  <th>{{'User Name'  }}</th>
-                  <th>{{'Restaurant'  }}</th>
-                  <th>{{'Ordered on'  }}</th>
-                  <th>{{'Status'  }}</th>
-                  <th>{{'Total'  }}</th>
-                  <th>{{'Quantity'  }}</th>
-                  <th>{{'Actions'  }}</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr *ngFor="let item of dummy">
-                  <td>
-                    <ngx-skeleton-loader count="1" [theme]="{
-                          'border-radius': '5px',
-                          height: '10px',
-                          border: '1px solid white'
-                        }"></ngx-skeleton-loader>
-                  </td>
-                  <td>
-                    <ngx-skeleton-loader count="1" [theme]="{
-                              'border-radius': '5px',
-                              height: '10px',
-                              border: '1px solid white'
-                          }"></ngx-skeleton-loader>
-                  </td>
-                  <td>
-                    <ngx-skeleton-loader count="1" [theme]="{
-                              'border-radius': '5px',
-                              height: '10px',
-                              border: '1px solid white'
-                            }"></ngx-skeleton-loader>
-                  </td>
-                  <td>
-                    <ngx-skeleton-loader count="1" [theme]="{
-                          'border-radius': '5px',
-                          height: '10px',
-                          border: '1px solid white'
-                        }"></ngx-skeleton-loader>
-                  </td>
-                  <td>
-                    <ngx-skeleton-loader count="1" [theme]="{
-                            'border-radius': '5px',
-                            height: '10px',
-                            border: '1px solid white'
-                          }"></ngx-skeleton-loader>
-                  </td>
-                  <td>
-                    <ngx-skeleton-loader count="1" [theme]="{
-                            'border-radius': '5px',
-                            height: '10px',
-                            border: '1px solid white'
-                          }"></ngx-skeleton-loader>
-                  </td>
-                  <td>
-                    <ngx-skeleton-loader count="1" [theme]="{
-                          'border-radius': '5px',
-                          height: '10px',
-                          border: '1px solid white'
-                        }"></ngx-skeleton-loader>
-                  </td>
-                  <td>
-                    <ngx-skeleton-loader count="1" [theme]="{
-                            'border-radius': '5px',
-                            height: '10px',
-                            border: '1px solid white'
-                          }"></ngx-skeleton-loader>
-                  </td>
-                  <td>
-                    <ngx-skeleton-loader count="1" [theme]="{
-                                      'border-radius': '5px',
-                                      height: '10px',
-                                      border: '1px solid white'
-                                  }"></ngx-skeleton-loader>
-                  </td>
-                </tr>
-                <tr *ngFor="let item of orders;let i = index">
-                  <td>{{item.id}}</td>
-                  <td><a href="javascript:;"><img class="img-responsive" style="height: 40px;border-radius: 50%;"
-                        [src]="item.uid.cover" onError="this.src='assets/images/user.png'" alt="chat-user"></a>
-                  </td>
-                  <td> {{item.uid.fullname}}</td>
-                  <td>{{item.vid.name}}</td>
-                  <td>{{getDates(item.time)}}</td>
-                  <td><button type="button" disabled [className]="getClass(item.status)">{{item.status}}</button></td>
-                  <td> {{getCurrency()}} {{item.grandTotal}}</td>
-                  <td>{{item.order.length}}</td>
-                  <td><button type="button" (click)="openOrder(item)"
-                      class="btn btn-success btn-round btn-outline-success">{{'View'  }}</button>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  
+
+
+   
+      <c-card-body class="table-responsive">
+        <table
+          [hover]="true"
+          [responsive]="true"
+          [striped]="true"
+          align="middle"
+          cTable
+          class="mb-0 border table-container"
+        >
+          <thead class="text-nowrap text-truncate">
+            <tr>
+              <th class="bg-body-tertiary text-center">
+                <svg cIcon name="cilPeople"></svg>
+              </th>
+              <th class="bg-body-tertiary ">Last 10 Orders</th>
+              <th class="bg-body-tertiary text-center">Table No</th>
+              <th class="bg-body-tertiary text-center">Status</th>
+              <th class="bg-body-tertiary text-center">Served By</th>
+            </tr>
+          </thead>
+          <tbody>
+            @for (user of users; track user.name; let i = $index) {
+            <tr>
+              <td class="text-center">
+                <c-avatar
+                  [size]="'md'"
+                  src="{{ user.avatar }}"
+                  status="{{ user.status }}"
+                />
+              </td>
+              <td>
+                <div>{{ user.name }}</div>
+                <div class="small text-body-secondary text-nowrap">
+                  <span>
+                    {{ user.state }} | Registered: {{ user.registered }}
+                  </span>
+                </div>
+              </td>
+              <td class="text-center">
+                <div class="float-center">
+                  <strong>{{ user.usage }}</strong>
+                </div>
+              </td>
+              <td class="text-center">
+                <c-badge class="ms-2 float-center" color="success"> PAID</c-badge>
+              </td>
+              <td class="text-center">
+                
+                
+                  <div class="float-center ms-1 ">
+                    <small class="text-body-secondary">
+                      {{ user.name }}
+                    </small>
+                  </div>
+               
+                
+              </td>
+            
+            </tr>
+            }
+          </tbody>
+        </table>
+      </c-card-body>
+   
+ 
