--- a/src/app/admin/restdetails/restdetails.component.html
+++ b/src/app/admin/restdetails/restdetails.component.html
@@ -28,9 +28,9 @@
                 [placeholder]="('Email'  ) || '&nbsp;'">
             </div>
             <div class="col-sm-6" *ngIf="new">
-              <label>  Password  </label>
-              <input type="password" [(ngModel)]="password" class="form-control"
-                [placeholder]="('Password'  ) || '&nbsp;'">
+              <label>  Id Number  </label>
+              <input type="number" [(ngModel)]="idnumber" class="form-control"
+                [placeholder]="('Id Number'  ) || '&nbsp;'">
             </div>
             <div class="col-sm-6">
               <label>  Contact No   </label>
