--- a/src/app/fragments/order-fragment/order-fragment.component.html
+++ b/src/app/fragments/order-fragment/order-fragment.component.html
@@ -1,1 +1,101 @@
-<p>order-fragment works!</p>
+@if (orders.length > 0) {
+    <c-card class="mb-4" >
+      
+        <table [hover]="true" [responsive]="true" [striped]="true" align="middle" cTable class="mb-0 border">
+          <thead class="text-nowrap text-truncate">
+            <tr>
+              <th class="bg-body-tertiary text-center">
+                <svg cIcon name="cilPeople"></svg>
+              </th>
+              <th class="bg-body-tertiary">orders</th>
+              <th class="bg-body-tertiary text-center">Status</th>
+              <th class="bg-body-tertiary text-center">Activity</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let item of dummy">
+             
+              <td>
+                <ngx-skeleton-loader
+                  count="1"
+                  [theme]="{
+                    'border-radius': '5px',
+                    height: '10px',
+                    border: '1px solid white'
+                  }"
+                ></ngx-skeleton-loader>
+              </td>
+              <td>
+                <ngx-skeleton-loader
+                  count="1"
+                  [theme]="{
+                    'border-radius': '5px',
+                    height: '10px',
+                    border: '1px solid white'
+                  }"
+                ></ngx-skeleton-loader>
+              </td>
+              <td>
+                <ngx-skeleton-loader
+                  count="1"
+                  [theme]="{
+                    'border-radius': '5px',
+                    height: '10px',
+                    border: '1px solid white'
+                  }"
+                ></ngx-skeleton-loader>
+              </td>
+              <td>
+                <ngx-skeleton-loader
+                  count="1"
+                  [theme]="{
+                    'border-radius': '5px',
+                    height: '10px',
+                    border: '1px solid white'
+                  }"
+                ></ngx-skeleton-loader>
+              </td>
+              
+            </tr>
+      
+      
+      
+    @for (order of orders.slice(0, 10); track order.fullname; let i = $index) {
+            <tr>
+              <td class="text-center">
+                <c-avatar [size]="'md'" [src]="order.coverImage" [status]="order.status === 'active' ? 'success' : 'danger'" />
+              </td>
+              <td>
+                <div>{{ order.fullName }} </div>
+                <div class="text-body-secondary text-nowrap">
+                  <span>
+                    {{ order.email }}
+                  </span>
+                </div>
+              </td>
+                
+              <td class="text-center">
+                <div class="text-body-secondary text-nowrap">
+                    <span>
+                      {{ order.type }}
+                    </span>
+                  </div>
+                <div class="d-flex justify-content-center align-items-center">
+                  <c-badge class="ms-2 float-end" [color]="order.status === 'active' ? 'success' : 'danger'">
+                    {{ order.status |uppercase }}
+                  </c-badge>
+                </div>
+              </td>
+              <td class="text-center">
+                <div class="small text-body-secondary">Last login</div>
+                <div class="fw-semibold text-nowrap">
+                  {{ order.createdAt.toDate() | date }}
+                </div>
+              </td>
+            
+            </tr>
+            }
+          </tbody>
+        </table>
+    </c-card>
+    }
