--- a/src/app/views/auth/login/login.component.html
+++ b/src/app/views/auth/login/login.component.html
@@ -7,35 +7,36 @@
             <c-card-body>
               <form cForm class="justify-content-center">
                 <h1 class="text-center">Login</h1>
-                <p class="text-body-secondary text-center">Sign In to your account</p>
-                
+                <p class="text-body-secondary text-center">
+                  Sign In to your account
+                </p>
+
                 <div class="text-center p-2">
-                  <img src="assets/logo.jpg" style="width: 150px; height: 150px"
-                      alt="logo.png" />
-              </div>
+                  <img src="assets/logo.jpg" style="width: 150px; height: 150px" alt="logo.png" />
+                </div>
 
                 <c-row>
-                    <button cButton class="px-4" color="primary" [disabled]="isLoading" (click)="login()">
-                      Login with Google
-                    </button>
+                  <button cButton class="px-4" color="primary" [disabled]="isLoading" (click)="login()">
+                    Login with Google
+                  </button>
                 </c-row>
-                
               </form>
             </c-card-body>
           </c-card>
-          <c-card [ngStyle]="{'minWidth.%': 44}" class="text-white bg-primary py-5">
+          <c-card [ngStyle]="{ 'minWidth.%': 44 }" class="text-white bg-primary py-5">
             <c-card-body class="text-center">
               <div>
                 <h2>Want to Register as a Restaurant Owner</h2>
                 <p>
                   Streamline your online orders with our all-in-one platform.
-
-Reach more customers: List your restaurant on a single platform that connects you with all major food delivery apps.
-Save time & effort: Manage orders, menus, and promotions from one central location.
-Boost your profits: Reduce fees and gain valuable customer insights.
+                  Reach more customers: List your restaurant on a single
+                  platform that connects you with all major food delivery apps.
+                  Save time & effort: Manage orders, menus, and promotions from
+                  one central location. Boost your profits: Reduce fees and gain
+                  valuable customer insights.
                 </p>
-                <button [active]="true" cButton class="mt-3" color="primary" routerLink="/setup">
-                  Register Now!
+                <button [active]="true" cButton class="mt-3" color="primary" (click)="register()">
+                  Register with Google
                 </button>
               </div>
             </c-card-body>
